<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:deviceIds="wear"
    android:background="@color/black"
    tools:context=".presentation.AddHealthInfoActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_boxedEdges="all">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:orientation="vertical"
            app:layout_boxedEdges="all"
            android:background="@color/black">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="16dp"
                android:textSize="12sp"/>
            <EditText
                android:id="@+id/edDate"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:hint="@string/date_example"
                android:textSize="12dp"
                android:layout_marginLeft="12dp"
                android:inputType="none"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/systolicPressure"
                android:textColor="@color/white"
                android:layout_marginLeft="16dp"
                android:textSize="12sp"/>
            <EditText
                android:id="@+id/edSystolicPressure"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:hint="@string/systolicPressure_example"
                android:textSize="12sp"
                android:layout_marginLeft="12dp"
                android:inputType="number"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diastolicPressure"
                android:textColor="@color/white"
                android:layout_marginLeft="16dp"
                android:textSize="12sp"/>
            <EditText
                android:id="@+id/edDiastolicPressure"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:hint="@string/diastolicPressure_example"
                android:textSize="12dp"
                android:layout_marginLeft="12dp"
                android:inputType="number"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calories_burned"
                android:textColor="@color/white"
                android:layout_marginLeft="16dp"
                android:textSize="12sp"/>
            <EditText
                android:id="@+id/edCalorieBurned"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:hint="@string/calories_burned_example"
                android:textSize="12dp"
                android:layout_marginLeft="12dp"
                android:inputType="number"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calories_received"
                android:textColor="@color/white"
                android:layout_marginLeft="16dp"
                android:textSize="12sp"/>
            <EditText
                android:id="@+id/edCalorieReceived"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:hint="@string/calories_received_example"
                android:textSize="12dp"
                android:layout_marginLeft="12dp"
                android:inputType="number"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hours_sleep"
                android:textColor="@color/white"
                android:layout_marginLeft="16dp"
                android:textSize="12sp"/>
            <EditText
                android:id="@+id/edHoursSleep"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:hint="@string/hours_sleep_example"
                android:textSize="12dp"
                android:layout_marginLeft="12dp"
                android:inputType="number"/>
            <Button
                android:id="@+id/btnAddInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_info"
                android:textAllCaps="false"
                android:textSize="12sp"
                android:layout_marginTop="10dp"
                android:background="@drawable/buttons" />
        </LinearLayout>

    </ScrollView>
</androidx.wear.widget.BoxInsetLayout>