<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:deviceIds="wear"
    android:background="@color/black"
    tools:context=".presentation.LogInActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_boxedEdges="all">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp"
            app:layout_boxedEdges="all"
            android:background="@color/black">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/baseline_monitor_heart"
                android:layout_marginTop="-10dp"
                android:layout_gravity="center_horizontal"/>
            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="14sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:textColor="@color/red"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/white"
                android:layout_marginTop="70dp"
                android:layout_marginLeft="16dp"
                android:textSize="12sp"/>
            <EditText
                android:id="@+id/login"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:hint="@string/example_login"
                android:textSize="12dp"
                android:layout_marginTop="80dp"
                android:layout_marginLeft="12dp"
                android:inputType="textEmailAddress"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/white"
                android:layout_marginTop="120dp"
                android:layout_marginLeft="16dp"
                android:textSize="12sp"/>
            <EditText
                android:id="@+id/password"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:hint="@string/your_password"
                android:textSize="12sp"
                android:layout_marginTop="130dp"
                android:layout_marginLeft="12dp"
                android:inputType="textPassword"/>
            <Button
                android:id="@+id/btnSingIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="180dp"
                android:text="@string/signIn"
                android:textAllCaps="false"
                android:textSize="12sp"
                android:background="@drawable/buttons" />
        </FrameLayout>
    </ScrollView>

</androidx.wear.widget.BoxInsetLayout>